Cambios en configuracion y agregado de dependencias

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,6 +23,8 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
 
+    "noImplicitAny": false,
+
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
