--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
@@ -28,7 +31,9 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "jest": "^30.2.0",
     "prettier": "^3.3.3",
+    "ts-jest": "^29.4.4",
     "typescript": "^5.2.2",
     "vite": "^5.3.5"
   }
